[ci] Clarify the use of inputs for workflow_call:
This sets the branch-specific inputs such that the branches only needs
to modify this section and get nightly builds of their branch.
Remove unrelated inputs that are not needed.
(For master, these input are also not needed, but they clarify how
to set this up for release branches.)

--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -18,7 +18,8 @@ on:
       - 'master'
       - 'v*-*-*-patches'
 
-  # Allows nightly builds to trigger one run for each branch easily
+  # Allows nightly builds to trigger one run for each branch easily, by
+  # providing the relevant branch as "default" value here:
   workflow_call:
     inputs:
       head_ref:
@@ -29,14 +30,6 @@ on:
         type: string
         required: true
         default: master
-      incremental:
-        type: boolean
-        required: true
-        default: false
-      binaries:
-        type: boolean
-        required: true
-        default: true
 
   # Enables manual start of workflow
   workflow_dispatch:
