--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -85,11 +85,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # Specify imageplatform + arch + (optional) build option overrides
+        #
+        # Available images: https://github.com/root-project/root-ci-images
+        # Common configs: {Release,Debug,RelWithDebInfo)
+        # Build options: https://root.cern/install/build_from_source/#all-build-options
         include:
           - platform: mac14
             arch: ARM64
-
-    name: ${{ matrix.platform }} ${{ matrix.arch }}
 
     runs-on: # Using '[self-hosted, ..., ...]' does not work for some reason :)
       - self-hosted
@@ -97,9 +100,36 @@ jobs:
       - ${{ matrix.arch }}
       - ${{ matrix.platform }}
 
+    name: ${{ matrix.platform }} ${{ matrix.arch }} ${{ join( matrix.overrides, ', ' ) }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Apply option overrides from matrix for this job
+        if: ${{ matrix.overrides != NaN }}
+        env:
+          OVERRIDES: ${{ join( matrix.overrides, ' ') }}
+          CONFIGFILE: '.github/workflows/root-ci-config/buildconfig/${{ matrix.image }}.txt'
+        shell: bash
+        run: |
+          set -x
+
+          echo '' >> "$CONFIGFILE"
+
+          for ENTRY in $OVERRIDES; do
+              KEY=$( echo "$ENTRY" | cut -d '=' -f 1 )
+
+              # Add entry to file if not exists, otherwise replace
+
+              if grep -q "$KEY=" "$CONFIGFILE"; then
+                  sed -i "s/$KEY=.*\$/$ENTRY/" "$CONFIGFILE"
+              else
+                  echo "$ENTRY" >> "$CONFIGFILE"
+              fi
+          done
+
+          cat "$CONFIGFILE" || true
 
       - name: Pull Request Build
         if: github.event_name == 'pull_request'
