--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -93,6 +93,7 @@ jobs:
         include:
           - platform: mac14
             arch: ARM64
+            overrides: ["LLVM_ENABLE_ASSERTIONS=On", "CMAKE_CXX_STANDARD=20"]
 
     runs-on: # Using '[self-hosted, ..., ...]' does not work for some reason :)
       - self-hosted
@@ -320,14 +321,21 @@ jobs:
         # Build options: https://root.cern/install/build_from_source/#all-build-options
         include:
           - image: fedora39
+            overrides: ["LLVM_ENABLE_ASSERTIONS=On", "CMAKE_CXX_STANDARD=20"]
           - image: fedora38
+            overrides: ["LLVM_ENABLE_ASSERTIONS=On", "CMAKE_CXX_STANDARD=20"]
           - image: fedora37
+            overrides: ["LLVM_ENABLE_ASSERTIONS=On"]
           - image: alma8
+            overrides: ["LLVM_ENABLE_ASSERTIONS=On"]
           - image: alma9
+            overrides: ["LLVM_ENABLE_ASSERTIONS=On"]
           - image: ubuntu20
+            overrides: ["LLVM_ENABLE_ASSERTIONS=On"]
           - image: ubuntu2304
+            overrides: ["LLVM_ENABLE_ASSERTIONS=On"]
           - image: ubuntu22
-            overrides: ["imt=Off"]
+            overrides: ["imt=Off", "LLVM_ENABLE_ASSERTIONS=On"]
 
     runs-on:
       - self-hosted
