--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -166,7 +166,7 @@ jobs:
                     --base_ref       ${{ github.ref_name }}
                     --repository     ${{ github.server_url }}/${{ github.repository }}"
 
-      - name: Update artifacts after push to release branch
+      - name: Update build cache after push to release branch
         if:   github.event_name == 'push'
         run: ".github/workflows/root-ci-config/build_root.py
                     --buildtype      RelWithDebInfo
@@ -277,7 +277,7 @@ jobs:
                     --repository   ${{ github.server_url }}/${{ github.repository }}
                     --architecture ${{ matrix.target_arch }}"
 
-      - name: Update artifacts after push to release branch
+      - name: Update build cache after push to release branch
         if:   github.event_name == 'push'
         shell: cmd
         run: "C:\\setenv.bat ${{ matrix.target_arch }} &&
@@ -444,7 +444,7 @@ jobs:
                     --repository     ${{ github.server_url }}/${{ github.repository }}
               "
 
-      - name: Update artifacts after push to release branch
+      - name: Update build cache after push to release branch
         if:   github.event_name == 'push'
         run: ".github/workflows/root-ci-config/build_root.py
                     --buildtype      RelWithDebInfo
