[ci] Switch CI to v6-30-00-patches.

--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -24,11 +24,11 @@ on:
       head_ref:
         type: string
         required: true
-        default: master
+        default: v6-30-00-patches
       base_ref:
         type: string
         required: true
-        default: master
+        default: v6-30-00-patches
       incremental:
         type: boolean
         required: true
@@ -45,12 +45,12 @@ on:
         description: rebase from ...
         type: string
         required: true
-        default: master
+        default: v6-30-00-patches
       base_ref:
         description: ... to ... (can have same value)
         type: string
         required: true
-        default: master
+        default: v6-30-00-patches
       incremental:
         description: 'Do incremental build'
         type: boolean
