--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -336,10 +336,12 @@ jobs:
             overrides: ["LLVM_ENABLE_ASSERTIONS=On", "CMAKE_BUILD_TYPE=Debug"]
           - image: ubuntu20
             overrides: ["LLVM_ENABLE_ASSERTIONS=On"]
-          - image: ubuntu2304
-            overrides: ["LLVM_ENABLE_ASSERTIONS=On"]
           - image: ubuntu22
             overrides: ["imt=Off", "LLVM_ENABLE_ASSERTIONS=On", "CMAKE_BUILD_TYPE=Debug"]
+          - image: ubuntu2304
+            overrides: ["LLVM_ENABLE_ASSERTIONS=On"]
+          - image: ubuntu2310
+            overrides: ["LLVM_ENABLE_ASSERTIONS=On", "CMAKE_CXX_STANDARD=20"]
 
     runs-on:
       - self-hosted
