[cmake] Remove build options already deprecated for 6.28.
Co-authored-by: Bertrand Bellenot <bellenot@users.noreply.github.com>

--- a/tree/dataframe/test/CMakeLists.txt
+++ b/tree/dataframe/test/CMakeLists.txt
@@ -116,8 +116,8 @@ if(pyroot)
   if(NOT MSVC OR win_broken_tests OR CMAKE_CXX_STANDARD GREATER 14)
     ROOT_ADD_PYUNITTEST(dataframe_misc dataframe_misc.py)
     ROOT_ADD_PYUNITTEST(dataframe_histograms dataframe_histograms.py)
-    ROOT_ADD_PYUNITTEST(dataframe_cache dataframe_cache.py ENVIRONMENT LEGACY_PYROOT=${pyroot_legacy})
-    ROOT_ADD_PYUNITTEST(dataframe_datasetspec dataframe_datasetspec.py ENVIRONMENT LEGACY_PYROOT=${pyroot_legacy})
+    ROOT_ADD_PYUNITTEST(dataframe_cache dataframe_cache.py ENVIRONMENT LEGACY_PYROOT="off")
+    ROOT_ADD_PYUNITTEST(dataframe_datasetspec dataframe_datasetspec.py ENVIRONMENT LEGACY_PYROOT="off")
   endif()
   if(NOT MSVC OR win_broken_tests)
     ROOT_ADD_PYUNITTEST(dataframe_merge_results dataframe_merge_results.py)
