--- a/roofit/roofitcore/CMakeLists.txt
+++ b/roofit/roofitcore/CMakeLists.txt
@@ -32,23 +32,15 @@ endif()
 
 ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
   HEADERS
-    RooFit/Config.h
-    RooFit/Detail/AnalyticalIntegrals.h
-    RooFit/Detail/EvaluateFuncs.h
-    RooFit/Detail/CodeSquashContext.h
-    RooFit/Detail/DataMap.h
-    RooFit/Detail/NormalizationHelpers.h
-    RooFit/Evaluator.h
-    RooFit/Floats.h
-    RooFit/ModelConfig.h
     Roo1DTable.h
+    RooAICRegistry.h
     RooAbsAnaConvPdf.h
     RooAbsArg.h
     RooAbsBinning.h
+    RooAbsCache.h
+    RooAbsCacheElement.h
     RooAbsCachedPdf.h
     RooAbsCachedReal.h
-    RooAbsCacheElement.h
-    RooAbsCache.h
     RooAbsCategory.h
     RooAbsCategoryLValue.h
     RooAbsCollection.h
@@ -72,21 +64,22 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     RooAbsTestStatistic.h
     RooAdaptiveIntegratorND.h
     RooAddGenContext.h
-    RooAddition.h
     RooAddModel.h
     RooAddPdf.h
-    RooAICRegistry.h
+    RooAddition.h
     RooArgList.h
     RooArgProxy.h
     RooArgSet.h
     RooBinIntegrator.h
+    RooBinSamplingPdf.h
+    RooBinWidthFunction.h
     RooBinnedGenContext.h
-    RooBinningCategory.h
     RooBinning.h
+    RooBinningCategory.h
     RooBrentRootFinder.h
+    RooCacheManager.h
     RooCachedPdf.h
     RooCachedReal.h
-    RooCacheManager.h
     RooCategory.h
     RooCategoryProxy.h
     RooChangeTracker.h
@@ -96,82 +89,102 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     RooCmdConfig.h
     RooCollectionProxy.h
     RooCompositeDataStore.h
-    RooConstraintSum.h
     RooConstVar.h
+    RooConstraintSum.h
     RooConvCoefVar.h
     RooConvGenContext.h
     RooCurve.h
     RooCustomizer.h
+    RooDLLSignificanceMCSModule.h
     RooDataHist.h
     RooDataHistSliceIter.h
     RooDataProjBinding.h
     RooDataSet.h
     RooDerivative.h
     RooDirItem.h
-    RooDLLSignificanceMCSModule.h
     RooDouble.h
     RooEffGenContext.h
-    RooEfficiency.h
     RooEffProd.h
+    RooEfficiency.h
     RooEllipse.h
     RooErrorHandler.h
     RooErrorVar.h
     RooExpensiveObjectCache.h
+    RooExtendPdf.h
     RooExtendedBinding.h
     RooExtendedTerm.h
-    RooExtendPdf.h
-    RooFactoryWSTool.h
     RooFFTConvPdf.h
+    RooFactoryWSTool.h
     RooFirstMoment.h
     RooFit.h
+    RooFit/Config.h
+    RooFit/Detail/AnalyticalIntegrals.h
+    RooFit/Detail/CodeSquashContext.h
+    RooFit/Detail/DataMap.h
+    RooFit/Detail/EvaluateFuncs.h
+    RooFit/Detail/NormalizationHelpers.h
+    RooFit/Evaluator.h
+    RooFit/Floats.h
+    RooFit/ModelConfig.h
+    RooFit/TestStatistics/LikelihoodGradientWrapper.h
+    RooFit/TestStatistics/LikelihoodWrapper.h
+    RooFit/TestStatistics/RooAbsL.h
+    RooFit/TestStatistics/RooBinnedL.h
+    RooFit/TestStatistics/RooRealL.h
+    RooFit/TestStatistics/RooSubsidiaryL.h
+    RooFit/TestStatistics/RooSumL.h
+    RooFit/TestStatistics/RooUnbinnedL.h
+    RooFit/TestStatistics/buildLikelihood.h
+    RooFitLegacy/RooCatTypeLegacy.h
+    RooFitLegacy/RooCategorySharedProperties.h
+    RooFitLegacy/RooTreeData.h
     RooFitResult.h
     RooFormulaVar.h
     RooFracRemainder.h
-    RooFunctor.h
     RooFuncWrapper.h
+    RooFunctor.h
     RooGenContext.h
-    RooGenericPdf.h
     RooGenFitStudy.h
+    RooGenericPdf.h
     RooGlobalFunc.h
     RooGrid.h
+    RooHist.h
     RooHistError.h
     RooHistFunc.h
-    RooHist.h
     RooHistPdf.h
     RooImproperIntegrator1D.h
-    RooRombergIntegrator.h
     RooInvTransform.h
+    RooLinTransBinning.h
     RooLinearCombination.h
     RooLinearVar.h
-    RooLinkedListElem.h
     RooLinkedList.h
+    RooLinkedListElem.h
     RooLinkedListIter.h
-    RooLinTransBinning.h
     RooListProxy.h
-    RooMath.h
-    RooMappedCategory.h
     RooMCIntegrator.h
     RooMCStudy.h
+    RooMappedCategory.h
+    RooMath.h
     RooMinimizer.h
     RooMoment.h
     RooMsgService.h
     RooMultiCategory.h
     RooMultiVarGaussian.h
-    RooNameReg.h
     RooNLLVar.h
+    RooNameReg.h
     RooNormSetCache.h
-    RooNumber.h
     RooNumCdf.h
-    RooNumConvolution.h
     RooNumConvPdf.h
+    RooNumConvolution.h
     RooNumGenConfig.h
     RooNumIntConfig.h
     RooNumIntFactory.h
     RooNumRunningInt.h
+    RooNumber.h
     RooObjCacheManager.h
     RooParamBinning.h
-    RooPlotable.h
     RooPlot.h
+    RooPlotable.h
     RooPolyFunc.h
     RooPolyVar.h
     RooPrintable.h
@@ -183,16 +196,15 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     RooProofDriverSelector.h
     RooPullVar.h
     RooQuasiRandomGenerator.h
-    RooRatio.h
     RooRandom.h
     RooRandomizeParamMCSModule.h
     RooRangeBinning.h
     RooRangeBoolean.h
+    RooRatio.h
     RooRealBinding.h
     RooRealConstant.h
     RooRealIntegral.h
     RooRealMPFE.h
-    RooTemplateProxy.h
     RooRealProxy.h
     RooRealSumFunc.h
     RooRealSumPdf.h
@@ -200,24 +212,26 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     RooRealVarSharedProperties.h
     RooRecursiveFraction.h
     RooRefCountList.h
-    RooSTLRefCountList.h
     RooResolutionModel.h
+    RooRombergIntegrator.h
+    RooSTLRefCountList.h
     RooSecondMoment.h
     RooSetProxy.h
     RooSharedProperties.h
     RooSimGenContext.h
     RooSimSplitGenContext.h
-    RooSimultaneous.h
     RooSimWSTool.h
+    RooSimultaneous.h
     RooStreamParser.h
     RooStringVar.h
     RooStringView.h
     RooStudyManager.h
     RooStudyPackage.h
     RooSuperCategory.h
-    RooTable.h
-    RooThresholdCategory.h
     RooTObjWrap.h
+    RooTable.h
+    RooTemplateProxy.h
+    RooThresholdCategory.h
     RooTrace.h
     RooTreeDataStore.h
     RooTruthModel.h
@@ -226,41 +240,28 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     RooVectorDataStore.h
     RooWorkspace.h
     RooWorkspaceHandle.h
-    RooXYChi2Var.h
-    RooHelpers.h
     RooWrapperPdf.h
-    RooBinSamplingPdf.h
-    RooBinWidthFunction.h
-    RooFitLegacy/RooCatTypeLegacy.h
-    RooFitLegacy/RooCategorySharedProperties.h
-    RooFitLegacy/RooTreeData.h
-    RooFit/TestStatistics/LikelihoodGradientWrapper.h
-    RooFit/TestStatistics/LikelihoodWrapper.h
-    RooFit/TestStatistics/RooAbsL.h
-    RooFit/TestStatistics/RooBinnedL.h
-    RooFit/TestStatistics/RooSubsidiaryL.h
-    RooFit/TestStatistics/RooSumL.h
-    RooFit/TestStatistics/RooRealL.h
-    RooFit/TestStatistics/RooUnbinnedL.h
-    RooFit/TestStatistics/buildLikelihood.h
+    RooXYChi2Var.h
   SOURCES
-    src/ConstraintHelpers.cxx
-    src/BatchModeHelpers.cxx
     src/BatchModeDataHelpers.cxx
-    src/Buffers.cxx
+    src/BatchModeHelpers.cxx
     src/BidirMMapPipe.cxx
     src/BidirMMapPipe.h
+    src/Buffers.cxx
+    src/ConstraintHelpers.cxx
     src/FitHelpers.cxx
+    src/Initialisation.cxx
     src/ModelConfig.cxx
     src/NormalizationHelpers.cxx
     src/Roo1DTable.cxx
+    src/RooAICRegistry.cxx
     src/RooAbsAnaConvPdf.cxx
     src/RooAbsArg.cxx
     src/RooAbsBinning.cxx
     src/RooAbsCache.cxx
+    src/RooAbsCacheElement.cxx
     src/RooAbsCachedPdf.cxx
     src/RooAbsCachedReal.cxx
-    src/RooAbsCacheElement.cxx
     src/RooAbsCategory.cxx
     src/RooAbsCategoryLValue.cxx
     src/RooAbsCollection.cxx
@@ -286,22 +287,22 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     src/RooAdaptiveIntegratorND.cxx
     src/RooAddGenContext.cxx
     src/RooAddHelpers.cxx
-    src/RooAddition.cxx
     src/RooAddModel.cxx
     src/RooAddPdf.cxx
-    src/RooAICRegistry.cxx
+    src/RooAddition.cxx
     src/RooArgList.cxx
     src/RooArgProxy.cxx
     src/RooArgSet.cxx
-    src/Initialisation.cxx
     src/RooBinIntegrator.cxx
+    src/RooBinSamplingPdf.cxx
+    src/RooBinWidthFunction.cxx
     src/RooBinnedGenContext.cxx
-    src/RooBinningCategory.cxx
     src/RooBinning.cxx
+    src/RooBinningCategory.cxx
     src/RooBrentRootFinder.cxx
+    src/RooCacheManager.cxx
     src/RooCachedPdf.cxx
     src/RooCachedReal.cxx
-    src/RooCacheManager.cxx
     src/RooCategory.cxx
     src/RooChangeTracker.cxx
     src/RooChi2Var.cxx
@@ -309,88 +310,92 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     src/RooCmdArg.cxx
     src/RooCmdConfig.cxx
     src/RooCompositeDataStore.cxx
-    src/RooConstraintSum.cxx
     src/RooConstVar.cxx
+    src/RooConstraintSum.cxx
     src/RooConvCoefVar.cxx
     src/RooConvGenContext.cxx
     src/RooConvIntegrandBinding.cxx
     src/RooCurve.cxx
     src/RooCustomizer.cxx
+    src/RooDLLSignificanceMCSModule.cxx
     src/RooDataHist.cxx
     src/RooDataHistSliceIter.cxx
     src/RooDataProjBinding.cxx
     src/RooDataSet.cxx
     src/RooDerivative.cxx
     src/RooDirItem.cxx
-    src/RooDLLSignificanceMCSModule.cxx
     src/RooDouble.cxx
     src/RooEffGenContext.cxx
-    src/RooEfficiency.cxx
     src/RooEffProd.cxx
+    src/RooEfficiency.cxx
     src/RooEllipse.cxx
     src/RooErrorVar.cxx
+    src/RooEvaluatorWrapper.cxx
     src/RooExpensiveObjectCache.cxx
+    src/RooExtendPdf.cxx
     src/RooExtendedBinding.cxx
     src/RooExtendedTerm.cxx
-    src/RooExtendPdf.cxx
-    src/RooFactoryWSTool.cxx
     src/RooFFTConvPdf.cxx
+    src/RooFactoryWSTool.cxx
     src/RooFirstMoment.cxx
+    src/RooFit/Detail/CodeSquashContext.cxx
+    src/RooFit/Detail/DataMap.cxx
+    src/RooFit/Evaluator.cxx
+    src/RooFitImplHelpers.cxx
+    src/RooFitLegacy/RooCatTypeLegacy.cxx
     src/RooFitResult.cxx
     src/RooFoamGenerator.cxx
     src/RooFormula.cxx
     src/RooFormulaVar.cxx
     src/RooFracRemainder.cxx
-    src/RooFunctor.cxx
     src/RooFuncWrapper.cxx
+    src/RooFunctor.cxx
     src/RooGenContext.cxx
-    src/RooGenericPdf.cxx
     src/RooGenFitStudy.cxx
     src/RooGenProdProj.cxx
+    src/RooGenericPdf.cxx
     src/RooGlobalFunc.cxx
     src/RooGrid.cxx
+    src/RooHelpers.cxx
     src/RooHist.cxx
     src/RooHistError.cxx
     src/RooHistFunc.cxx
     src/RooHistPdf.cxx
     src/RooImproperIntegrator1D.cxx
-    src/RooRombergIntegrator.cxx
     src/RooInvTransform.cxx
+    src/RooLinTransBinning.cxx
     src/RooLinearCombination.cxx
     src/RooLinearVar.cxx
     src/RooLinkedList.cxx
     src/RooLinkedListElem.cxx
-    src/RooLinTransBinning.cxx
-    src/RooMath.cxx
-    src/RooMappedCategory.cxx
     src/RooMCIntegrator.cxx
     src/RooMCStudy.cxx
+    src/RooMappedCategory.cxx
+    src/RooMath.cxx
     src/RooMinimizer.cxx
     src/RooMinimizerFcn.cxx
     src/RooMoment.cxx
     src/RooMsgService.cxx
     src/RooMultiCategory.cxx
     src/RooMultiVarGaussian.cxx
-    src/RooNameReg.cxx
-    src/RooFit/Evaluator.cxx
-    src/RooEvaluatorWrapper.cxx
     src/RooNLLVar.cxx
     src/RooNLLVarNew.cxx
+    src/RooNameReg.cxx
     src/RooNormSetCache.cxx
     src/RooNormalizedPdf.cxx
-    src/RooNumber.cxx
     src/RooNumCdf.cxx
-    src/RooNumConvolution.cxx
     src/RooNumConvPdf.cxx
+    src/RooNumConvolution.cxx
     src/RooNumGenConfig.cxx
     src/RooNumGenFactory.cxx
     src/RooNumIntConfig.cxx
     src/RooNumIntFactory.cxx
     src/RooNumRunningInt.cxx
+    src/RooNumber.cxx
     src/RooObjCacheManager.cxx
     src/RooParamBinning.cxx
-    src/RooPlotable.cxx
     src/RooPlot.cxx
+    src/RooPlotable.cxx
     src/RooPolyFunc.cxx
     src/RooPolyVar.cxx
     src/RooPrintable.cxx
@@ -402,11 +407,11 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     src/RooProofDriverSelector.cxx
     src/RooPullVar.cxx
     src/RooQuasiRandomGenerator.cxx
-    src/RooRatio.cxx
     src/RooRandom.cxx
     src/RooRandomizeParamMCSModule.cxx
     src/RooRangeBinning.cxx
     src/RooRangeBoolean.cxx
+    src/RooRatio.cxx
     src/RooRealBinding.cxx
     src/RooRealConstant.cxx
     src/RooRealIntegral.cxx
@@ -415,24 +420,25 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     src/RooRealSumPdf.cxx
     src/RooRealVar.cxx
     src/RooRecursiveFraction.cxx
-    src/RooSTLRefCountList.cxx
     src/RooResolutionModel.cxx
+    src/RooRombergIntegrator.cxx
+    src/RooSTLRefCountList.cxx
     src/RooSecondMoment.cxx
     src/RooSentinel.cxx
     src/RooSharedProperties.cxx
     src/RooSimGenContext.cxx
     src/RooSimSplitGenContext.cxx
-    src/RooSimultaneous.cxx
     src/RooSimWSTool.cxx
+    src/RooSimultaneous.cxx
     src/RooStreamParser.cxx
     src/RooStringVar.cxx
     src/RooStudyManager.cxx
     src/RooStudyPackage.cxx
     src/RooSuperCategory.cxx
-    src/RooTable.cxx
     src/RooTFoamBinding.cxx
-    src/RooThresholdCategory.cxx
     src/RooTObjWrap.cxx
+    src/RooTable.cxx
+    src/RooThresholdCategory.cxx
     src/RooTrace.cxx
     src/RooTreeDataStore.cxx
     src/RooTruthModel.cxx
@@ -440,24 +446,18 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     src/RooUnitTest.cxx
     src/RooVectorDataStore.cxx
     src/RooWorkspace.cxx
-    src/RooXYChi2Var.cxx
-    src/RooHelpers.cxx
     src/RooWrapperPdf.cxx
-    src/RooBinSamplingPdf.cxx
-    src/RooBinWidthFunction.cxx
-    src/RooFitLegacy/RooCatTypeLegacy.cxx
-    src/RooFit/Detail/CodeSquashContext.cxx
-    src/RooFit/Detail/DataMap.cxx
+    src/RooXYChi2Var.cxx
     src/TestStatistics/ConstantTermsOptimizer.cxx
     src/TestStatistics/LikelihoodGradientWrapper.cxx
-    src/TestStatistics/LikelihoodWrapper.cxx
     src/TestStatistics/LikelihoodSerial.cxx
+    src/TestStatistics/LikelihoodWrapper.cxx
     src/TestStatistics/MinuitFcnGrad.cxx
     src/TestStatistics/RooAbsL.cxx
     src/TestStatistics/RooBinnedL.cxx
+    src/TestStatistics/RooRealL.cxx
     src/TestStatistics/RooSubsidiaryL.cxx
     src/TestStatistics/RooSumL.cxx
-    src/TestStatistics/RooRealL.cxx
     src/TestStatistics/RooUnbinnedL.cxx
     src/TestStatistics/buildLikelihood.cxx
     ${RooFitMPTestStatisticsSources}
@@ -482,6 +482,8 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     inc/LinkDef.h
   ${EXTRA_DICT_OPTS}
 )
+
+target_include_directories(RooFitCore INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/res>)
 
 # For recent clang, this can facilitate auto-vectorisation.
 # In RooFit, the errno side effect is not needed, anyway:
