--- a/roofit/roofitcore/CMakeLists.txt
+++ b/roofit/roofitcore/CMakeLists.txt
@@ -149,6 +149,7 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     RooGenericPdf.h
     RooGlobalFunc.h
     RooGrid.h
+    RooHelpers.h
     RooHist.h
     RooHistError.h
     RooHistFunc.h
