[RF] Migrate `stressHistFactory` to gtest in `histfactory/test`
It was not meaningful to have a clone on the `stressRooFit` tests suite
just for a single test that compares pdf values, and it didn't even use
the reference file mechanism from `RooUnitTest`.

Since future unit tests are not added to the `stress` suites anymore but
added as gtests, we might as well also migrate the single test that was
formerly `stressHistFactory`.

--- a/roofit/histfactory/test/CMakeLists.txt
+++ b/roofit/histfactory/test/CMakeLists.txt
@@ -6,6 +6,12 @@
 
 # @author Stephan Hageboeck CERN, 2019
 
+if(NOT MSVC OR win_broken_tests)
+  ROOT_ADD_GTEST(stressHistFactory stressHistFactory.cxx
+    LIBRARIES RooFitCore RooFit RooStats HistFactory
+    COPY_TO_BUILDDIR ${CMAKE_CURRENT_SOURCE_DIR}/HistFactoryTest.tar ${CMAKE_CURRENT_SOURCE_DIR}/HistFactoryTest.tar)
+endif()
+
 ROOT_ADD_GTEST(testHistFactory testHistFactory.cxx
   LIBRARIES RooFitCore RooFit RooStats HistFactory RooFitHS3
   COPY_TO_BUILDDIR ${CMAKE_CURRENT_SOURCE_DIR}/ref_6.16_example_UsingC_channel1_meas_model.root ${CMAKE_CURRENT_SOURCE_DIR}/ref_6.16_example_UsingC_combined_meas_model.root)
