[RF] Make it possible to compile RooFit without old test statistics
This is a very useful developer tool, because one can see what the
coverage of RooFit is if the legacy evaluation backend is not present,
without having to worry that is is still used in some code path.

--- a/roofit/CMakeLists.txt
+++ b/roofit/CMakeLists.txt
@@ -4,6 +4,8 @@
 # For the licensing terms see $ROOTSYS/LICENSE.
 # For the list of contributors see $ROOTSYS/README/CREDITS.
 
+set(roofit_legacy_eval_backend ON)
+
 add_subdirectory(batchcompute)
 if (roofit_multiprocess)
   add_subdirectory(roofitZMQ)
@@ -19,7 +21,7 @@ add_subdirectory(histfactory)
 add_subdirectory(RDataFrameHelpers)
 add_subdirectory(jsoninterface)
 add_subdirectory(hs3)
-if(NOT MSVC)
+if(roofit_legacy_eval_backend AND NOT MSVC)
   add_subdirectory(xroofit)
 endif()
 if(cuda)
