[RF] Move stressRooFit and stressRooStats to `roofit` directory
This allows us to better control the test parameters in CMake with
common RooFit configuration varaibles, without having to "leak" this
information outside the RooFit build configuration.

For example, we now don't run the stress tests with the legacy
evaluation backend if RooFit is not built with it.

--- a/roofit/roofitcore/test/CMakeLists.txt
+++ b/roofit/roofitcore/test/CMakeLists.txt
@@ -73,3 +73,22 @@ if (roofit_multiprocess)
   ROOT_ADD_GTEST(testLikelihoodJob TestStatistics/testLikelihoodJob.cxx LIBRARIES RooFitMultiProcess RooFitCore m)
   target_include_directories(testLikelihoodJob PRIVATE ${RooFitCore_MultiProcess_TestStatistics_INCLUDE_DIR})
 endif()
+
+if(mathmore)
+  list(APPEND ROOFITMORE_LIBRARIES RooFitMore)
+endif()
+
+#--stressRooFit----------------------------------------------------------------------------------
+ROOT_EXECUTABLE(stressRooFit stressRooFit.cxx LIBRARIES RooFit Gpad ${ROOFITMORE_LIBRARIES})
+if(mathmore)
+    target_compile_definitions(stressRooFit PRIVATE ROOFITMORE)
+endif()
+
+configure_file(stressRooFit_ref.root stressRooFit_ref.root COPYONLY)
+if(roofit_legacy_eval_backend)
+  ROOT_ADD_TEST(test-stressroofit-legacy COMMAND stressRooFit -b legacy FAILREGEX "FAILED|Error in")
+endif()
+ROOT_ADD_TEST(test-stressroofit-cpu COMMAND stressRooFit -b cpu FAILREGEX "FAILED|Error in")
+if(cuda)
+  ROOT_ADD_TEST(test-stressroofit-cuda COMMAND stressRooFit -b cuda FAILREGEX "FAILED|Error in")
+endif()
