[RF] Remove `R__HAS_ROOFIT_MULTIPROCESS` from ROOT configuration
The `R__HAS_ROOFIT_MULTIPROCESS` is not used in any public header files,
so it's not needed. In the RooFit implementation, it is replaced with a
`ROOFIT_MULTIPROCESS` define that is part of the RooFitCore target.

The `R__HAS_ROOFIT_MULTIPROCESS` was only introduced in ROOT 6.26 and it
was never advocated to users, so it should be safe to remove it.

--- a/roofit/roofitcore/CMakeLists.txt
+++ b/roofit/roofitcore/CMakeLists.txt
@@ -494,6 +494,11 @@ if(roofit_legacy_eval_backend)
   target_compile_definitions(RooFitCore PRIVATE ROOFIT_LEGACY_EVAL_BACKEND)
 endif()
 
+if(roofit_multiprocess)
+  # PUBLIC to it can also be used in tests
+  target_compile_definitions(RooFitCore PUBLIC ROOFIT_MULTIPROCESS)
+endif()
+
 target_include_directories(RooFitCore INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/res>)
 
 # For recent clang, this can facilitate auto-vectorisation.
