[RF] Avoid need for `R__HAS_CUDA`
In RooFit, there are checks if ROOT is build with CUDA only in the
`.cxx` implementation files, not in the public headers. We therefore
don't need a `R__HAS_CUDA` in the ROOT configuration.

The `R__HAS_CUDA` flag was only introduced in ROOT 6.26 and it was never
advocated to users, so it should be safe to remove it.

--- a/roofit/roofitcore/CMakeLists.txt
+++ b/roofit/roofitcore/CMakeLists.txt
@@ -488,13 +488,18 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
   ${EXTRA_DICT_OPTS}
 )
 
+# The following definitions are PUBLIC so they can also be used in ROOT-internal tests
+
 if(roofit_legacy_eval_backend)
-  target_compile_definitions(RooFitCore PRIVATE ROOFIT_LEGACY_EVAL_BACKEND)
+  target_compile_definitions(RooFitCore PUBLIC ROOFIT_LEGACY_EVAL_BACKEND)
 endif()
 
 if(roofit_multiprocess)
-  # PUBLIC to it can also be used in tests
   target_compile_definitions(RooFitCore PUBLIC ROOFIT_MULTIPROCESS)
+endif()
+
+if(cuda)
+  target_compile_definitions(RooFitCore PUBLIC ROOFIT_CUDA)
 endif()
 
 target_include_directories(RooFitCore INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/res>)
