[RF] Don't check Minos output code in RooStats LikelihoodInterval
Don't check the Minos output code, because if the Minos errors are
at the limit, Minuit2 will return nonzero, unlike Minuit 1.
This case where the errors are at limit should not cause a failure
though. The `stressRooStats` test suite actively provokes it, by fitting
a dataset with a single observed value that corresponds to a best-fit
parameter value at the limit.

With these changes, the `stressRooStats` suite will also pass with
Minuit2 and BatchMode, which is now added as a unit test.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -278,6 +278,7 @@ if(ROOT_roofit_FOUND)
   endif()
   if (ROOT_minuit2_FOUND)
     ROOT_ADD_TEST(test-stressroostats-minuit2 COMMAND stressRooStats -minim Minuit2 -b legacy  FAILREGEX "FAILED|Error in" LABELS longtest)
+    ROOT_ADD_TEST(test-stressroostats-batchmode-cpu-minuit2 COMMAND stressRooStats -minim Minuit2 -b cpu FAILREGEX "FAILED|Error in" LABELS longtest)
   endif()
 
 endif()
