[PyROOT] Fix distributed RDataFrame tests due to error serialization
This commit enables serialization of the Python proxy defined within cppyy to
the C++ std::runtime_error class. By doing so, we avoid errors that happen in
certain configurations of Dask tasks where a std::runtime_error may be thrown
within the event loop itself. Recent CI failures report the following:

```
  RDataFrame::Run: event loop was interrupted
  Warning in <TBufferFile::WriteObjectAny>: since runtime_error has no public constructor
	which can be called without argument, objects of this class
	can not be read with the current library. You will need to
	add a default constructor before attempting to read it.
  Warning in <TStreamerInfo::Build>: runtime_error: base class exception has no streamer or dictionary it will not be saved
  Warning in <TStreamerInfo::Build>: runtime_error: __cow_string has no streamer or dictionary, data member "_M_msg" will not be saved
  Error in <TClass::New>: cannot create object of class runtime_error
  Error in <TBufferFile::ReadObject>: could not create object of class runtime_error
   *** Break *** segmentation violation
```

This is due to the fact that for some reason the std::runtime_error object is
serialized at the end of the function scope within the Dask task. The
culprit is the [tblib](https://github.com/ionelmc/python-tblib) Python
package, a dependency of Dask. Its most recent version (3.0.0)
released on October 22th changes the pickling behaviour of exception
objects, which is now evidently more enforced than before. Downgrading
to previous versions of tblib make the errors above disappear in the
distributed RDataFrame tests.

--- a/bindings/pyroot/pythonizations/CMakeLists.txt
+++ b/bindings/pyroot/pythonizations/CMakeLists.txt
@@ -92,6 +92,7 @@ set(py2_py3_sources
   ROOT/_pythonization/__init__.py
   ROOT/_pythonization/_pyz_utils.py
   ROOT/_pythonization/_rvec.py
+  ROOT/_pythonization/_runtime_error.py
   ROOT/_pythonization/_stl_vector.py
   ROOT/_pythonization/_tarray.py
   ROOT/_pythonization/_tclass.py
