--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -148,6 +148,7 @@ jobs:
                     --base_ref        ${{ github.base_ref }}
                     --pull_repository ${{ github.event.pull_request.head.repo.clone_url }}
                     --head_ref        refs/pull/${{ github.event.pull_request.number }}/head:${{ github.event.pull_request.head.ref }}
+                    --head_sha        ${{ github.sha }}
                     --repository      ${{ github.server_url }}/${{ github.repository }}"
 
       - name: Workflow dispatch
@@ -254,6 +255,7 @@ jobs:
                     --base_ref        ${{ github.base_ref }}
                     --pull_repository ${{ github.event.pull_request.head.repo.clone_url }}
                     --head_ref        refs/pull/${{ github.event.pull_request.number }}/head:${{ github.event.pull_request.head.ref }}
+                    --head_sha        ${{ github.sha }}
                     --repository      ${{ github.server_url }}/${{ github.repository }}
                     --architecture    ${{ matrix.target_arch }}"
 
@@ -426,8 +428,9 @@ jobs:
                     --dockeropts      '--security-opt label=disable --rm'
                     --incremental     $INCREMENTAL
                     --base_ref        ${{ github.base_ref }}
-                    --head_ref        refs/pull/${{ github.event.pull_request.number }}/head:${{ github.event.pull_request.head.ref }}
                     --pull_repository ${{ github.event.pull_request.head.repo.clone_url }}
+                    --head_ref        refs/pull/${{ github.event.pull_request.number }}/head:${{ github.event.pull_request.head.ref }}
+                    --head_sha        ${{ github.sha }}
                     --repository      ${{ github.server_url }}/${{ github.repository }}
               "
 
